--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             3) Replace the placeholder src below with: assets/profile.jpg
           -->
           <a href="assets/profile.jpg">
-            <img class="profile-img" src="assets/profile.jpg" alt="profile photo (upload assets/profile.jpg)">
+            <img class="profile-img" src="assets/profile.jpg" alt="Adi Shnaidman">
           </a>
           <div class="photo-note">Upload your headshot to <code>assets/profile.jpg</code></div>
         </td>
