Update paper links and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -307,33 +307,29 @@ a.papertitle:hover{
       <img class="thumb" src="assets/activation_steering.jpg" alt="Activation Steering thumbnail (optional)">
     </td>
     <td width="75%">
-      <a class="papertitle" href="https://arxiv.org/abs/2512.24143" target="_blank" rel="noopener">
+      <a class="papertitle" href="https://arxiv.org/abs/2512.24143" target="_blank" rel="noopener" onclick="event.stopPropagation();">
         Activation Steering for Masked Diffusion Language Models
       </a><br>
       <span class="paper-meta">arXiv · 2026 · Under review (ICLR ReALM–GEN workshop)</span><br>
       <span class="paper-meta">A. Shnaidman, E. Feiglin, O. Yaari, E. Mentel, A. Levi, R. Lapid</span>
-      <p class="muted">
-        Inference-time steering method for masked diffusion language models via activation-level signals, enabling controllable behavior without retraining.
-      </p>
+      <p class="muted">Inference-time steering method for masked diffusion language models via activation-level signals, enabling controllable behavior without retraining.</p>
     </td>
   </tr>
 </table>
 
 <table class="paper-row" width="100%">
-  <tr class="highlight paper-click" onclick="window.open('https://arxiv.org/abs/2601.08490','_blank','noopener');">
+  <tr class="paper-click" onclick="window.open('https://arxiv.org/abs/2601.08490','_blank','noopener');">
     <td width="25%">
       <img class="thumb" src="assets/benchoverflow.jpg" alt="BenchOverflow thumbnail (optional)">
     </td>
     <td width="75%">
-      <a class="papertitle" href="https://arxiv.org/abs/2601.08490" target="_blank" rel="noopener">
+      <a class="papertitle" href="https://arxiv.org/abs/2601.08490" target="_blank" rel="noopener" onclick="event.stopPropagation();">
         BenchOverflow: Measuring Overflow in Large Language Models via Plain-Text Prompts
       </a><br>
       <span class="paper-meta">TMLR · 2025 · Accepted to NVIDIA GTC 2026</span><br>
       <span class="paper-meta"><strong>Authors:</strong> Erin Feiglin, Nir Hutnik, Raz Lapid</span><br>
       <span class="paper-meta"><strong>Contribution:</strong> Acknowledged contributor</span>
-      <p class="muted">
-        Studies a common failure mode where non-adversarial prompts trigger massive over-generation, driving up latency and cost unexpectedly.
-      </p>
+      <p class="muted">Studies a common failure mode where non-adversarial prompts trigger massive over-generation, driving up latency and cost unexpectedly.</p>
     </td>
   </tr>
 </table>
