Update profile image max-width to 160px
Reduced maximum width of profile image from 320px to 160px.

--- a/index.html
+++ b/index.html
@@ -93,17 +93,18 @@
     .muted{ color: var(--muted); }
 
     /* Profile photo */
-    .profile-img{
-      width:100%;
-      max-width: 320px;
-      aspect-ratio: 1 / 1;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 1px solid var(--border);
-      box-shadow: 0 6px 24px rgba(17,24,39,.08);
-      display:block;
-      margin-left:auto;
-    }
+.profile-img{
+  width: 100%;
+  max-width: 160px;   /* was 320px */
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 1px solid var(--border);
+  box-shadow: 0 6px 24px rgba(17,24,39,.08);
+  display: block;
+  margin-left: auto;
+}
+
     .photo-note{
       font-size: 13px;
       color: var(--muted);
