Update profile image max-width to 120px
Reduced max-width of profile image from 240px to 120px.

--- a/index.html
+++ b/index.html
@@ -213,10 +213,12 @@ a.papertitle:hover{
         display:block;
         width:100%;
       }
-      .profile-img{
-        max-width: 240px;
-        margin: 8px auto 0;
-      }
+  .profile-img{
+    max-width: 120px; /* was 240px */
+    margin: 8px auto 0;
+  }
+}
+
       .photo-note{ text-align:center; }
       .paper-row td{ display:block; width:100%; }
       .thumb{ max-width: 100%; }
