--- a/index.html
+++ b/index.html
@@ -229,14 +229,10 @@ a.papertitle:hover{
   /* On mobile you can keep thumbs full-width */
   .thumb{ max-width: 100%; }
 }
-
-
-      .photo-note{ text-align:center; }
-      .paper-row td{ display:block; width:100%; }
-      .thumb{ max-width: 100%; }
-    }
-  </style>
+      </style>
 </head>
+
+<body>
 
 <body>
   <!-- Navigation Bar -->
