Adjust widths of intro-left and intro-right classes
Updated the width of .intro-left and .intro-right classes for better layout.

--- a/index.html
+++ b/index.html
@@ -179,16 +179,17 @@ a.papertitle:hover{
       border:0;
       margin: 22px auto 6px;
     }
-    .intro-left{
-      padding: 16px;
-      width: 58%;
-      vertical-align: middle;
-    }
-    .intro-right{
-      padding: 16px;
-      width: 42%;
-      vertical-align: middle;
-    }
+.intro-left{
+  padding: 16px;
+  width: 70%;          /* was 58% */
+  vertical-align: middle;
+}
+
+.intro-right{
+  padding: 16px;
+  width: 30%;          /* was 42% */
+  vertical-align: middle;
+}
 
     /* Lists */
     ul{
