--- a/index.html
+++ b/index.html
@@ -405,12 +405,14 @@ a.papertitle:hover{
 
     <!-- Honors / Volunteer / Languages -->
     <div class="section">
-      <h2>Honors &amp; Service</h2>
+      <h2>Honors</h2>
       <ul>
         <li>Monday’s Excellence Scholarship (Top 30 CS &amp; Engineering students), 2023–2024</li>
         <li>Board of Governors Honor (Volunteer contribution), 2024</li>
         <li>Outstanding Admission Award (Top pre-admission score), 2021</li>
       </ul>
+    </div>
+
 
       <div style="height:10px;"></div>
 
