Update text alignment and fix HTML structure
Added new styles for text alignment in the intro section and corrected an HTML tag.

--- a/index.html
+++ b/index.html
@@ -190,6 +190,10 @@ a.papertitle:hover{
   width: 30%;          /* was 42% */
   vertical-align: middle;
 }
+    .intro-left { text-align: center; }
+.intro-left p { text-align: left; }     /* keep paragraphs readable */
+.intro-left .muted { text-align: center; }
+
 
     /* Lists */
     ul{
@@ -250,7 +254,7 @@ a.papertitle:hover{
     <table class="intro-table">
       <tr>
         <td class="intro-left">
-          <h1 class="name" style="text-align:center;">Adi Shnaidman</h1>
+          <h1 class="name" style=<h1 class="name">Adi Shnaidman</h1>
 
           <p>
             I’m a <strong>Machine Learning Researcher</strong> focused on advancing the <strong>robustness, safety, and reliability</strong> of large language models.
