--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ a.papertitle:hover{
     <table class="intro-table">
       <tr>
         <td class="intro-left">
-          <h1 class="name" style=<h1 class="name">Adi Shnaidman</h1>
+        <h1 class="name">Adi Shnaidman</h1>
 
           <p>
             I’m a <strong>Machine Learning Researcher</strong> focused on advancing the <strong>robustness, safety, and reliability</strong> of large language models.
