Replace Honors section with Volunteer project details
Updated the Honors section to include a Volunteer project description.

--- a/index.html
+++ b/index.html
@@ -409,13 +409,15 @@ a.papertitle:hover{
 
     <!-- Honors / Volunteer / Languages -->
     <div class="section">
-      <h2>Honors</h2>
-      <ul>
-        <li>Monday’s Excellence Scholarship (Top 30 CS &amp; Engineering students), 2023–2024</li>
-        <li>Board of Governors Honor (Volunteer contribution), 2024</li>
-        <li>Outstanding Admission Award (Top pre-admission score), 2021</li>
-      </ul>
+      <h2>Volunteer</h2>
+      <p>
+        <strong>Combatting Global Misinformation and Antisemitism Project</strong> (Oct 2023 – Jan 2024)<br>
+        <span class="muted">
+          Initiated and led a global volunteer project facilitating discussions with participants worldwide to counter misinformation and promote accurate narratives.
+        </span>
+      </p>
     </div>
+
 
 
       <div style="height:10px;"></div>
