--- a/index.html
+++ b/index.html
@@ -180,19 +180,17 @@ a.papertitle:hover{
       margin: 22px auto 6px;
     }
 .intro-left{
-  padding: 16px;
-  width: 70%;          /* was 58% */
-  vertical-align: middle;
+  width: 76%;          /* was 70% */
+  padding-right: 6px;  /* was 16px */
 }
 
 .intro-right{
-  padding: 16px;
-  width: 30%;          /* was 42% */
-  vertical-align: middle;
+  width: 24%;          /* was 30% */
+  padding-left: 6px;   /* was 16px */
 }
-    .intro-left { text-align: center; }
-.intro-left p { text-align: left; }     /* keep paragraphs readable */
-.intro-left .muted { text-align: center; }
+
+.intro-left { text-align: left; }
+.intro-left .muted { text-align: left; }
 
 
     /* Lists */
@@ -268,7 +266,7 @@ a.papertitle:hover{
             Herzliya (Tel Aviv District), Israel · DeepKeep · The Hebrew University of Jerusalem
           </p>
 
-          <p style="text-align:center; margin-top: 14px;">
+          <p style="margin-top: 14px;">
             <a href="mailto:adishnaidman@gmail.com">Email</a> &nbsp;/&nbsp;
             <!-- Add your Scholar link when ready -->
             <!-- <a href="https://scholar.google.com/citations?user=YOUR_ID">Scholar</a> &nbsp;/&nbsp; -->
