Center align h1.name in index.html

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
       font-weight: 700;
       letter-spacing: -0.02em;
     }
+    h1.name{
+    text-align: center;
+    }
+
     h2{
       margin: 0 0 8px 0;
       font-size: 24px;
