--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
   <meta name="description" content="Adi Shnaidman — Machine Learning Researcher. LLM safety, robustness, adversarial ML, and evaluation.">
   <meta name="keywords" content="Adi Shnaidman, LLM safety, robustness, adversarial ML, prompt injection, LLM evaluation, ML security, DeepKeep">
 
-  <!-- Open Graph / Twitter -->
   <meta property="og:title" content="Adi Shnaidman">
   <meta property="og:description" content="Machine Learning Researcher working on LLM safety, robustness, adversarial ML, and evaluation.">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
 
-  <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
   <style>
@@ -35,35 +33,6 @@
       line-height: 1.55;
     }
 
-    /* Navigation bar */
-    nav{
-      background-color: #1f9bb7;
-      padding: 10px 0;
-    }
-    nav ul{
-      list-style:none;
-      margin:0;
-      padding:0;
-      display:flex;
-      justify-content:center;
-      gap: 18px;
-    }
-    nav ul li{ margin:0; }
-    nav ul li a{
-      text-decoration:none;
-      color:white;
-      font-size: 17px;
-      font-weight: 700;
-      padding: 6px 10px;
-      border-radius: 8px;
-      transition: background-color .2s, color .2s;
-    }
-    nav ul li a:hover{
-      background:#fff;
-      color:#0b7285;
-    }
-
-    /* Wrapper */
     .wrap{
       width:100%;
       max-width:860px;
@@ -80,7 +49,7 @@
       margin: 0 0 10px 0;
       font-weight: 700;
       letter-spacing: -0.02em;
-      text-align: center; /* centered across full table width */
+      text-align: center;
     }
 
     h2{
@@ -93,7 +62,6 @@
     p{ margin: 10px 0; }
     .muted{ color: var(--muted); }
 
-    /* Profile photo */
     .profile-img{
       width: 100%;
       max-width: 160px;
@@ -106,7 +74,6 @@
       margin-left: auto;
     }
 
-    /* Section separator */
     .section{
       padding: 14px 0;
       border-top: 1px solid var(--border);
@@ -116,11 +83,11 @@
       padding-top: 0;
     }
 
-    /* Paper/project rows */
     .paper-row td{
       padding: 18px 14px;
       vertical-align: middle;
     }
+
     .thumb{
       width: 100%;
       max-width: 170px;
@@ -130,11 +97,13 @@
       box-shadow: 0 6px 22px rgba(17,24,39,.06);
       display:block;
     }
+
     .paper-meta{
       font-size: 14px;
       color: var(--muted);
       margin-top: 3px;
     }
+
     a.papertitle{
       color: var(--text);
       text-decoration: none;
@@ -144,12 +113,10 @@
       margin-bottom: 4px;
     }
     a.papertitle:hover{ text-decoration: underline; }
+
     .paper-click{ cursor:pointer; }
     .paper-click:hover{ background:#f8fafc; }
 
-    .highlight{ background: var(--highlight); }
-
-    /* Intro layout (name row is FULL width; bio+photo below) */
     .intro-table{
       width:100%;
       border:0;
@@ -160,7 +127,7 @@
     }
     .intro-left{
       width: 78%;
-      padding-right: 0px;   /* tighter toward photo */
+      padding-right: 0px;
       vertical-align: top;
       text-align: left;
     }
@@ -170,14 +137,12 @@
       vertical-align: top;
     }
 
-    /* Lists */
     ul{
       margin: 8px 0 0;
       padding-left: 18px;
     }
     li{ margin: 6px 0; }
 
-    /* Footer */
     .footer{
       border-top: 1px solid var(--border);
       padding: 18px 0 26px;
@@ -187,7 +152,6 @@
       text-align: right;
     }
 
-    /* Mobile */
     @media (max-width: 820px){
       .intro-left, .intro-right{
         display:block;
@@ -210,14 +174,12 @@
   <div class="wrap">
     <!-- Intro -->
     <table class="intro-table">
-      <!-- FULL-WIDTH NAME -->
       <tr class="intro-name-row">
         <td colspan="2">
           <h1 class="name">Adi Shnaidman</h1>
         </td>
       </tr>
 
-      <!-- BIO + PHOTO -->
       <tr>
         <td class="intro-left">
           <p>
@@ -280,7 +242,9 @@
             </a><br>
             <span class="paper-meta">arXiv · 2026 · Under review (ICLR ReALM–GEN workshop)</span><br>
             <span class="paper-meta">A. Shnaidman, E. Feiglin, O. Yaari, E. Mentel, A. Levi, R. Lapid</span>
-            <p class="muted">Inference-time steering method for masked diffusion language models via activation-level signals, enabling controllable behavior without retraining.</p>
+            <p class="muted">
+              Inference-time steering method for masked diffusion language models via activation-level signals, enabling controllable behavior without retraining.
+            </p>
           </td>
         </tr>
       </table>
@@ -295,9 +259,10 @@
               BenchOverflow: Measuring Overflow in Large Language Models via Plain-Text Prompts
             </a><br>
             <span class="paper-meta">TMLR · 2025 · Accepted to NVIDIA GTC 2026</span><br>
-            <span class="paper-meta"><strong>Authors:</strong> Erin Feiglin, Nir Hutnik, Raz Lapid</span><br>
-            <span class="paper-meta"><strong>Contribution:</strong> Acknowledged contributor</span>
-            <p class="muted">Studies a common failure mode where non-adversarial prompts trigger massive over-generation, driving up latency and cost unexpectedly.</p>
+            <span class="paper-meta">Erin Feiglin, Nir Hutnik, Raz Lapid, Adi Shnaidman*</span>
+            <p class="muted">
+              Studies a common failure mode where non-adversarial prompts trigger massive over-generation, driving up latency and cost unexpectedly.
+            </p>
           </td>
         </tr>
       </table>
@@ -308,13 +273,21 @@
             <img class="thumb" src="assets/brain_tradeoffs.jpg" alt="Structure–Function Tradeoffs thumbnail (optional)">
           </td>
           <td width="75%">
-            <span style="font-weight:700; font-size:17px; display:inline-block; margin-bottom:4px;">Structure–Function Tradeoffs in the Human Brain</span><br>
+            <span style="font-weight:700; font-size:17px; display:inline-block; margin-bottom:4px;">
+              Structure–Function Tradeoffs in the Human Brain
+            </span><br>
             <span class="paper-meta">Unpublished · 2024</span><br>
             <span class="paper-meta">A. Shnaidman, A. Meisel, O. Ventura</span>
-            <p class="muted">Explores structural/functional connectivity trade-offs using high-dimensional neuroimaging data and trade-off characterization methods.</p>
+            <p class="muted">
+              Explores structural/functional connectivity trade-offs using high-dimensional neuroimaging data and trade-off characterization methods.
+            </p>
           </td>
         </tr>
       </table>
+
+      <p class="paper-meta" style="margin-top: 6px;">
+        * Acknowledged contributor
+      </p>
     </div>
 
     <!-- Experience -->
@@ -351,7 +324,6 @@
       </p>
     </div>
 
-    <!-- Footer -->
     <div class="footer">
       © <span id="year"></span> Adi Shnaidman
     </div>
