--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
               BenchOverflow: Measuring Overflow in Large Language Models via Plain-Text Prompts
             </a><br>
             <span class="paper-meta">TMLR · 2025 · Accepted to NVIDIA GTC 2026</span><br>
-            <span class="paper-meta">Erin Feiglin, Nir Hutnik, Raz Lapid, Adi Shnaidman*</span>
+            <span class="paper-meta">Erin Feiglin, Nir Hutnik, Raz Lapid</span><br>
+            <span class="paper-meta"><em>* Acknowledged for contributions</em></span>
             <p class="muted">
               Studies a common failure mode where non-adversarial prompts trigger massive over-generation, driving up latency and cost unexpectedly.
             </p>
