--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <span class="paper-meta">Erin Feiglin, Nir Hutnik, Raz Lapid</span><br>
             <span class="paper-meta"><em>* Acknowledged for contributions</em></span>
             <p class="muted">
-              Studies a common failure mode where non-adversarial prompts trigger massive over-generation, driving up latency and cost unexpectedly.
+            Introduces <strong>BenchOverflow</strong>, a model-agnostic benchmark of nine plain-text prompting strategies that induce excessive generations without jailbreaks or policy circumvention. Using a fixed 5,000-token budget and tail-risk metrics (e.g., CSR/ECDF), it shows overflow is reproducible yet model-dependent—and that a simple conciseness reminder significantly reduces heavy-tail over-generation across most models.
             </p>
           </td>
         </tr>
